# spout4gd

./: CMakeLists.txt  mod.json
lib/Spout2/: SpoutGLextensions.h
src/: FakeCursor.cpp  FakeCursor.hpp  SpoutManager.cpp  SpoutManager.hpp  SpoutTarget.cpp  SpoutTarget.hpp  includes.hpp  main.cpp  unused-code.cppp
